# posix_uart_terminal

./: makefile  meson.build
include/: shared.h  threads.h
scripts/: init_virtualtty.sh
src/terminal/: file.h  main.c  threads.c
src/uart/: main.c  threads.c  uart.h
